--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 
 <body>
   <header class="header">
-    <img src="#" alt="img/mnc1.jpg" id="headImg">
+    <img src="img/mnc1.jpg" alt="mnc1" id="headImg">
     <h1>MNC</h1>
   </header>
   <main class="main">
     <!-- creating card1 -->
     <article class="box">
-      <img src="#" alt="img/i2.jpg" id="boxImg">
-      <h2 class="headertag"><a href="https://www.infosys.com/Careers/">Infosys</a></h2>
+      <img src="img/i2.jpg" alt="infosys" id="boxImg">
+      <h2 class="headertag"><a href="https://www.infosys.com/Careers/" target="_blank">Infosys</a></h2>
       <p class="company">Infosys is a
         global leader in next-generation digital services and
         consulting. We enable clients in 45 countries to navigate their digital
@@ -27,8 +27,8 @@
     </article>
     <!-- creating card2 -->
     <article class="box">
-      <img src="#" alt="img/w2.jpg" id="boxImg">
-      <h2 class="headertag"><a href="https://www.wipro.com/en-IN/overview/">Wipro</a></h2>
+      <img src="img/w2.jpg" alt="wipro" id="boxImg">
+      <h2 class="headertag"><a href="https://www.wipro.com/en-IN/overview/" target="_blank">Wipro</a></h2>
       <p class="company">Wipro Limited is a global provider of comprehensive IT solutions
         [buzzword] and services, including Systems Integration, Consulting,
         Information Systems outsourcing, IT-enabled services, R&D services.
@@ -37,8 +37,8 @@
     </article>
     <!-- creating card3 -->
     <article class="box">
-      <img src="#" alt="img/t2.jpg" id="boxImg">
-      <h2 class="headertag"> <a href="https://www.tcs.com/">TCS</a></h2>
+      <img src="img/t2.jpg" alt="tcs" id="boxImg">
+      <h2 class="headertag"> <a href="https://www.tcs.com/" target="_blank">TCS</a></h2>
       <p class="company"> Rajesh Gopinathan is the Chief Executive Officer and Managing Director
         of Tata Consultancy Services (TCS), a leading global IT solutions and
         consulting firm. He was elevated to the role of Chief Executive in
@@ -46,8 +46,8 @@
     </article>
     <!-- creating card4 -->
     <article class="box">
-      <img src="#" alt="img/g1.jpg" id="boxImg">
-      <h2 class="headertag"><a href="https://en.wikipedia.org/wiki/Google">Google</a></h2>
+      <img src="img/g1.jpg" alt="google" id="boxImg">
+      <h2 class="headertag"><a href="https://en.wikipedia.org/wiki/Google" target="_blank">Google</a></h2>
       <p class="company">Google Inc., American search engine company, founded in 1998 by Sergey Brin
         and Larry Page that is a subsidiary of the holding company Alphabet Inc.
         More than 70 percent of worldwide online search requests are handled by Google,
