modifed index and css with comments

--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
 </head>
 
 <body>
+  <!-- heading -->
   <header class="header">
     <img src="img/mnc1.jpg" alt="mnc1" id="headImg">
     <h1>MNC</h1>
   </header>
+  <!-- main container -->
   <main class="main">
     <!-- creating card1 -->
     <article class="box">
@@ -54,6 +56,7 @@
         placing it at the heart of most Internet users’ experience.</p>
   </main>
 </body>
+<!-- footer -->
 <footer class="foot">
   <h4>copyright&copy;2019</h4>
 </footer>
