--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!-- heading -->
   <header class="header">
     <img src="img/mnc1.jpg" alt="mnc1" id="headImg">
-    <h1>MNC</h1>
+    <h1 class="mnc">MNC</h1>
   </header>
   <!-- main container -->
   <main class="main">
