modified id to class;

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 <body>
   <!-- heading -->
   <header class="header">
-    <img src="img/mnc1.jpg" alt="mnc1" id="headImg">
+    <img src="img/mnc1.jpg" alt="mnc1" class="headImg">
     <h1 class="mnc">MNC</h1>
   </header>
   <!-- main container -->
   <main class="main">
     <!-- creating card1 -->
     <article class="box">
-      <img src="img/i2.jpg" alt="infosys" id="boxImg">
+      <img src="img/i2.jpg" alt="infosys" class="boxImg">
       <h2 class="headertag"><a href="https://www.infosys.com/Careers/" target="_blank">Infosys</a></h2>
       <p class="company">Infosys is a
         global leader in next-generation digital services and
@@ -29,7 +29,7 @@
     </article>
     <!-- creating card2 -->
     <article class="box">
-      <img src="img/w2.jpg" alt="wipro" id="boxImg">
+      <img src="img/w2.jpg" alt="wipro" class="boxImg">
       <h2 class="headertag"><a href="https://www.wipro.com/en-IN/overview/" target="_blank">Wipro</a></h2>
       <p class="company">Wipro Limited is a global provider of comprehensive IT solutions
         [buzzword] and services, including Systems Integration, Consulting,
@@ -39,7 +39,7 @@
     </article>
     <!-- creating card3 -->
     <article class="box">
-      <img src="img/t2.jpg" alt="tcs" id="boxImg">
+      <img src="img/t2.jpg" alt="tcs" class="boxImg">
       <h2 class="headertag"> <a href="https://www.tcs.com/" target="_blank">TCS</a></h2>
       <p class="company"> Rajesh Gopinathan is the Chief Executive Officer and Managing Director
         of Tata Consultancy Services (TCS), a leading global IT solutions and
@@ -48,17 +48,19 @@
     </article>
     <!-- creating card4 -->
     <article class="box">
-      <img src="img/g1.jpg" alt="google" id="boxImg">
+      <img src="img/g1.jpg" alt="google" class="boxImg">
       <h2 class="headertag"><a href="https://en.wikipedia.org/wiki/Google" target="_blank">Google</a></h2>
       <p class="company">Google Inc., American search engine company, founded in 1998 by Sergey Brin
         and Larry Page that is a subsidiary of the holding company Alphabet Inc.
         More than 70 percent of worldwide online search requests are handled by Google,
         placing it at the heart of most Internet users’ experience.</p>
+    </article>
   </main>
+
+  <!-- footer -->
+  <footer class="foot">
+    <h4>copyright&copy;2019</h4>
+  </footer>
 </body>
-<!-- footer -->
-<footer class="foot">
-  <h4>copyright&copy;2019</h4>
-</footer>
 
 </html>
